# youtube-community-parser

./: .env.example  .gitattributes  .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  README.md  justfile  plan.md
.github/workflows/: ci.yml  links.yml
app/: index.html  main.js  styles.css
app/lib/: escape-html.js  escape-html.test.js
crates/core/: Cargo.toml
crates/core/benches/: ranking_bench.rs
crates/core/src/: benchmark.rs  cost.rs  ideas.rs  insight.rs  lib.rs  models.rs  ranking.rs  seo.rs  text.rs
crates/core/tests/: architecture.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/llm/tests/: wiremock_providers.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/storage/tests/: upsert_idempotencia.rs
ingest/: package-lock.json  package.json
ingest/src/: index.js  mapper.js  mapper.test.js  youtube.js  youtube.test.js
legacy/: index.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test-manifest.xml
src-tauri/capabilities/: default.json
src-tauri/src/: confirm.rs  ingest.rs  lib.rs  main.rs  youtube.rs
src-tauri/tests/: ipc_boundary.rs
