[workspace]
resolver = "2"
members = ["crates/core", "crates/storage", "src-tauri"]

[workspace.package]
edition = "2021"
rust-version = "1.77"
license = "ISC"
authors = ["Damian Sire <damiansire@gmail.com>"]
repository = "https://github.com/damiansire/Subscriptor-Data-Parser"

# Versiones pinneadas una sola vez; cada crate hace `dep.workspace = true`.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

# Deps optimizadas incluso en dev (sidecar/parsing corren rápido) mientras
# nuestro código queda en opt-level=0 para compilar veloz.
[profile.dev.package."*"]
opt-level = 3

# Binario final chico y rápido.
[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true
