[workspace]
resolver = "2"
members = ["crates/core", "crates/storage", "crates/llm", "src-tauri"]

[workspace.package]
edition = "2021"
rust-version = "1.77"
license = "ISC"
authors = ["Damian Sire <damiansire@gmail.com>"]
repository = "https://github.com/damiansire/Subscriptor-Data-Parser"

# Versiones pinneadas una sola vez; cada crate hace `dep.workspace = true`.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
# Cliente HTTP nativo de la ingesta (reemplaza al sidecar Node). rustls-tls para
# no depender de OpenSSL del sistema (distribuibilidad). json para parseo tipado.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# La API key no debe quedar en claro en memoria más de lo necesario (F2).
secrecy = "0.10"
urlencoding = "2"
# Trait async dyn-compatible para el contrato multi-proveedor de IA (F12).
async-trait = "0.1"
# Servidor HTTP mockeado para tests de los adaptadores (sin red real).
wiremock = "0.6"

# Deps optimizadas incluso en dev (sidecar/parsing corren rápido) mientras
# nuestro código queda en opt-level=0 para compilar veloz.
[profile.dev.package."*"]
opt-level = 3

# Binario final chico y rápido.
[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true
