[package]
name = "sdp-desktop"
version = "0.1.0"
description = "Sistema de trackeo de comentarios de YouTube (app de escritorio)."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "sdp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sdp-core = { path = "../crates/core" }
