[package]
name = "sdp-desktop"
version = "0.1.0"
description = "Sistema de trackeo de comentarios de YouTube (app de escritorio)."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "sdp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
reqwest.workspace = true
tokio.workspace = true
secrecy.workspace = true
urlencoding.workspace = true
sdp-core = { path = "../crates/core" }
sdp-storage = { path = "../crates/storage" }
sdp-llm = { path = "../crates/llm" }

[dev-dependencies]
# Servidor HTTP mockeado para testear el cliente de YouTube sin red ni API key.
wiremock = "0.6"
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "rt"] }
