[package]
name = "sdp-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Dominio puro del sistema de trackeo de comentarios: modelos y rankings de comentaristas."

[dependencies]
serde.workspace = true
chrono.workspace = true
# Errores tipados del contrato de IA (F12, módulo `insight`).
thiserror.workspace = true
# Parseo de la respuesta de IA (F12) y round-trip de modelos en tests.
serde_json.workspace = true

# Bench de medición (Fase 2/F4): main() plano, sin criterion ni deps externas.
[[bench]]
name = "ranking_bench"
harness = false
