[package]
name = "sdp-llm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Capa de IA opcional multi-proveedor (Anthropic/Gemini) detrás de un trait, para refinar las salidas heurísticas (F12)."

[dependencies]
sdp-core = { path = "../core" }
reqwest.workspace = true
# `time` para el backoff del retry header-aware (sleep entre reintentos).
tokio = { workspace = true, features = ["time"] }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
