[package]
name = "sdp-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Persistencia local (SQLite) del histórico de comentarios y comentaristas."

[dependencies]
sdp-core = { path = "../core" }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono.workspace = true
thiserror = "2"
