[package]
name = "sdp-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Persistencia local (SQLite) del histórico de comentarios y comentaristas."

[dependencies]
sdp-core = { path = "../core" }
rusqlite.workspace = true
chrono.workspace = true
thiserror.workspace = true
# Tags de video_meta se serializan como JSON en una columna TEXT.
serde_json.workspace = true
